[package]
name = "polynomical"
description = "tiny polynomial manipulation library"
authors = ["uncoordinated-assault"]
version = "1.0.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[features]
default = ["std"]
std = ["num/std"]
alloc = ["num/alloc"]
bigint = ["num/num-bigint"]
libm = ["num/libm"]
serde = ["num/serde"]

[dependencies]
num = "0.4.1"
paste = "1.0.14"
